--- a/index.html
+++ b/index.html
@@ -15,10 +15,68 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400..700;1,400..700&display=swap"
-  rel="stylesheet">
+    rel="stylesheet">
 </head>
 
 <body>
+  <main>
+    <div class="card">
+      <header class="card-header">
+        <img src="./src/images/icon-star.svg" alt="star icon">
+        <h1>FAQs</h1>
+      </header>
+      <ul class="questions">
+        <li class="question">
+          <div class="question-title clickable">
+            <h2>What is Frontend Mentor, and how will it help me?</h2>
+            <div>
+              <img src="./src/images/icon-plus.svg" alt="plus icon" class="plus-icon on">
+              <img src="./src/images/icon-minus.svg" alt="minus icon" class="minus-icon">
+            </div>
+          </div>
+          <p class="answer">Frontend Mentor offers realistic coding challenges to help developers improve their frontend
+            coding skills with projects in HTML, CSS, and JavaScript. It's suitable for all levels and ideal for
+            portfolio building.</p>
+        </li>
+        <li class="question">
+          <div class="question-title clickable">
+            <h2>Is Frontend Mentor free?</h2>
+            <div>
+              <img src="./src/images/icon-plus.svg" alt="plus icon" class="plus-icon on">
+              <img src="./src/images/icon-minus.svg" alt="minus icon" class="minus-icon">
+            </div>
+          </div>
+          <p class="answer">Yes, Frontend Mentor offers both free and premium coding challenges, with the free option
+            providing access to a range of projects suitable for all skill levels.</p>
+        </li>
+        <li class="question">
+          <div class="question-title clickable">
+            <h2>Can I use Frontend Mentor projects in my portfolio?</h2>
+            <div>
+              <img src="./src/images/icon-plus.svg" alt="plus icon" class="plus-icon on">
+              <img src="./src/images/icon-minus.svg" alt="minus icon" class="minus-icon">
+            </div>
+          </div>
+          <p class="answer">Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent
+            way to showcase your skills to potential employers!</p>
+        </li>
+        <li class="question">
+          <div class="question-title clickable">
+            <h2>How can I get help if I'm stuck on a challenge?</h2>
+            <div>
+              <img src="./src/images/icon-plus.svg" alt="plus icon" class="plus-icon on">
+              <img src="./src/images/icon-minus.svg" alt="minus icon" class="minus-icon">
+            </div>
+          </div>
+          <p class="answer">The best place to get help is inside Frontend Mentor's Discord community. There's a help
+            channel where you can ask questions and seek support from other community members.</p>
+        </li>
+      </ul>
+    </div>
+  </main>
+
+
+  <script src="./src/js/index.js"></script>
 </body>
 
 </html>
